--- a/index.html
+++ b/index.html
@@ -5,48 +5,78 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Lora" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <title>Document</title>
 </head>
 <body>
     
-    <h1>Crystal Collector</h1>
-
-    <div class='instructions'>
-        <p>You will be given a random number at the start of the game.</p>
-        <p>There are four crystals below. By clicking on a crystal you will add a specific amount of points to your total.</p>
-        <p>You win the game by matching the your total to the random number, you lose when the game if your total goes over.</p>
-        <p>The value of each crystal will be hidden from you, but you can see how much is added to your total.</p>
-        <p>Each time the game restarts, the game will change the value of each crystal.</p>
+    <div class='row'>
+        <div class='col-lg-4'></div>
+        <h1 class='col-lg-4'>Crystal Collector</h1>
+        <div class='col-lg-4'></div>
     </div>
 
-    <div id='target'>
-    </div>
-
-    <div>
-        <div id='message'>
+    <div class='container'>
+        <div class="row">
+            <div class='col-lg-2'></div>
+            <div class='instructions col-lg-8'>
+                <p>You will be given a random number at the start of the game.</p>
+                <p>There are four crystals below. By clicking on a crystal you will add a specific amount of points to your total.</p>
+                <p>You win the game by matching the your total to the random number, you lose when the game if your total goes over.</p>
+                <p>The value of each crystal will be hidden from you, but you can see how much is added to your total.</p>
+                <p>Each time the game restarts, the game will change the value of each crystal.</p>
+            </div>
+            <div class='col-lg-2'></div>
         </div>
-        <div id='score'>
+    </div>
+
+    <div class='row'>
+        <div class='col-3'></div>
+        <div class='col-lg-2' id='target'></div>
+        <div class='col-lg-1'></div>
+        <div class='info col-lg-3'>
+            <div id='message'>
+            </div>
+            <div id='score'>
+            </div>
+        </div>
+        <div class='col-lg-3'></div>
+    </div>
+
+    <div class='container input'>
+        <div class='row'>
+            <div class='col-lg-2'></div>
+            <button class='col-sm-12 col-md-12 col-lg-2 control' id='btn_1' value=''></button>
+            <button class='col-sm-12 col-md-12 col-lg-2 control' id='btn_2' value=''></button>
+            <button class='col-sm-12 col-md-12 col-lg-2 control' id='btn_3' value=''></button>
+            <button class='col-sm-12 col-md-12 col-lg-2 control' id='btn_4' value=''></button>
+            <div class='col-lg-2'></div>
         </div>
     </div>
 
-    <div class='input'>
-        <button class='control' id='btn_1' value=''></button>
-        <button class='control' id='btn_2' value=''></button>
-        <button class='control' id='btn_3' value=''></button>
-        <button class='control' id='btn_4' value=''></button>
+    <div class="row">
+        <div class='col-lg-5'></div>
+        <div class='col-lg-2' id="user-total-txt">
+            <p>Your total: </p>
+        </div>
+        <div class='col-lg-5'></div>
     </div>
 
-    <div id="user-total-txt">
-        <p>Your total: </p>
-    </div>
-
-    <div id="user-total-int">
+    <div class="row">
+        <div class='col-lg-5'></div>
+        <div class='col-lg-2' id="user-total-int"></div>
+        <div class='col-lg-5'></div>
     </div>
 
     <script src="assets/javascript/game.js">
     </script>
+
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
 
 </body>
 </html>
