--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div class='instructions col-lg-8'>
                 <p>You will be given a random number at the start of the game.</p>
                 <p>There are four crystals below. By clicking on a crystal you will add a specific amount of points to your total.</p>
-                <p>You win the game by matching the your total to the random number, you lose when the game if your total goes over.</p>
+                <p>You win the game by matching your total to the random number, you lose the game if your total goes over.</p>
                 <p>The value of each crystal will be hidden from you, but you can see how much is added to your total.</p>
                 <p>Each time the game restarts, the game will change the value of each crystal.</p>
             </div>
